src/objects/vlocity_ins__DRBundle__c.object
<CustomObject>
    <description>The Vlocity DataRaptor mapping bundle describes a given usage of Vlocity DataRaptor to transform data from one interface to another. The bundle contains a collection of mappings (Map Items) which define how data is transformed from the source interface to the target interface.</description>
    <fields>
        <fullName>vlocity_ins__BatchSize__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Items to process in each batch. Max: 2000</description>
        <label>Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CheckFieldLevelSecurity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Field Level Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CustomInputClass__c</fullName>
        <label>Custom Input Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CustomOutputClass__c</fullName>
        <label>Custom Output Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DRMapName__c</fullName>
        <description>The DR Map Name being used to process.</description>
        <label>DataRaptor Map Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DeleteOnSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Delete records after successfully processed.</description>
        <label>Delete On Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Product. Used to identify the product across Salesforce instances.</description>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IgnoreErrors__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Continue processing after errors</description>
        <label>Ignore Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InputCustom__c</fullName>
        <label>Input Custom</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InputJson__c</fullName>
        <description>Saved Input format to assist in Mapping</description>
        <label>Input JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InputType__c</fullName>
        <label>Input Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InputXml__c</fullName>
        <label>InputXml</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InterfaceObject__c</fullName>
        <description>Interface object used.</description>
        <label>Interface Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsDefaultForInterface__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes this is the Default DR Setting for the specified Interface Object.</description>
        <label>Is Default For Interface</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsProcessSuperBulk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Process Each Creation Object in separate transactions</description>
        <label>Process Super Bulk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OuboundStagingObjectDataField__c</fullName>
        <label>Oubound Staging Object Data Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OutboundConfigurationField__c</fullName>
        <label>Outbound Configuration Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OutboundConfigurationName__c</fullName>
        <label>Outbound Configuration Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OutboundStagingObjectName__c</fullName>
        <label>Outbound Staging Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OutputType__c</fullName>
        <label>Output Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OverwriteAllNullValues__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overwrite Target For All Null Inputs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PreprocessorClassName__c</fullName>
        <label>Preprocessor Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProcessNowThreshold__c</fullName>
        <defaultValue>-1</defaultValue>
        <description>Process immediately if under this number. Max: 199</description>
        <label>Process Now Threshold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RequiredPermission__c</fullName>
        <label>Required Permission (Optional)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RollbackOnError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rollback On Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SampleInputCustom__c</fullName>
        <label>Sample Input Custom</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SampleInputJSON__c</fullName>
        <description>Sample Input JSON for Preview Mode</description>
        <label>Sample Input JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SampleInputRows__c</fullName>
        <description>Sample Input rows for Preview Mode</description>
        <label>Sample Input Rows</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SampleInputXML__c</fullName>
        <label>Sample Input XML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TargetOutCustom__c</fullName>
        <label>Expected Custom Output</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TargetOutDocuSignTemplateId__c</fullName>
        <label>Target Output DocuSign Template Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TargetOutJson__c</fullName>
        <description>Expected output JSON to assist in Mapping</description>
        <label>Expected Output JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TargetOutPdfDocName__c</fullName>
        <description>Name of PDF document mappings are being transformed into</description>
        <label>Target Output PDF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TargetOutXml__c</fullName>
        <label>Expected XML Output</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Interface Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__UseAssignmentRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Assignment Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__UseTranslations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Translations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__XmlOutputSequence__c</fullName>
        <label>Xml Output Sequence</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__XmlRemoveDeclaration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Xml Remove Declaration</label>
        <type>Checkbox</type>
    </fields>
    <label>Vlocity DataRaptor Bundle</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DataRaptor Bundle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity DataRaptor Bundles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>